fixing scroll visible bug in documentation.js

--- a/style/fadein.css
+++ b/style/fadein.css
@@ -23,6 +23,14 @@
         filter: none;
     }
 }
+@-webkit-keyframes fadeInWithOutZoom {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
 @keyframes fadeInWithOutZoom {
     0% {
         opacity: 0;
